--- a/the-nature-of-code/6-friction/index.html
+++ b/the-nature-of-code/6-friction/index.html
@@ -7,6 +7,8 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="particle.js"></script>
+    <script language="javascript" type="text/javascript" src="liquid.js"></script>
+    <script language="javascript" type="text/javascript" src="mover.js"></script>
     <style>
     body {
       padding: 20px;
