--- a/the-nature-of-code/8-vehicle/index.html
+++ b/the-nature-of-code/8-vehicle/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <head>
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="vehicle.js"></script>
     <style>
     body {
       padding: 20px;
