--- a/the-nature-of-code/16-recursion-with-arrays/index.html
+++ b/the-nature-of-code/16-recursion-with-arrays/index.html
@@ -6,6 +6,8 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="leaf.js"></script>
+    <script language="javascript" type="text/javascript" src="branch.js"></script>
     <style>
     body {
       padding: 20px;
